adaptive fix and scrollbar removing

--- a/src/scss/basic.scss
+++ b/src/scss/basic.scss
@@ -16,3 +16,12 @@
 body {
   height: 5000px;
 }
+
+html {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
