--- a/src/scss/why-ama.scss
+++ b/src/scss/why-ama.scss
@@ -27,7 +27,7 @@
     grid-row: 2;
     grid-column: 1/-1;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
     gap: 30px;
   }
 
